- Adding a plugin to a custom cyberweapon no longer causes a crash.
- Cyberware limited by the number of limbs is now not affected by detached modular limbs.
- Tooltips breaking down a character's total armor now properly recognize when certain sources of armor have been made invalid.
- Fixed Gear not using Restricted Gear correctly. Possibly needs more testing, but initial efforts seem correct. 
- Some changes to logic on how usage of restricted gear is displayed

New Strings:
- String_GameplayOption

Data Changes:
- Fixed missing multiplier for Haunted lifestyle quality.

Build 216
Application Changes:
- The Master Index no longer crashes if a PDF offset is set to a massively high number.
- Fixed a rare crash that might happen on certain systems running Windows 11.

Data Changes:
- Fixed a heinous bug that caused a bunch of sourcebooks to always be enabled no matter what.
- Fixed the page offsets for text search patterns in the PDF scanner 

Changed/New Strings:
- Error_Message_PDF_IndexOutOfBounds
- String_Scanning
- String_Scanning_Pattern
- String_Initializing_Pattern

Build 215
Application Changes:
- Added a Scan Folder for PDF Sourcebooks to Options, so that (to Chummer known) Sourcebooks are automatically found and indexed.
- Fixed a lot of buggy behavior related to opening characters with Chummer from outside the program (e.g. with Windows' "Open with..." function).
- Clicking on "Open PDF" on a Master Index entry with no associated pdf now opens the "Choose PDF" Dialog instead of doing nothing.
- Fixed a crash when Custom Date and/or Time Formats were set to an empty value.
- Added the ability for devs to set an action when a user double clicks on an entry in the character roster.
- Added the upload of a crash to ApplicationInsights in parallel to the old Crashhandler (Loglevelfilters still apply)