@@ -80,6 +80,40 @@ namespace Chummer
             xmlMentor.TryGetStringFieldQuickly("page", ref _strPage);
             if (!xmlMentor.TryGetMultiLineStringFieldQuickly("altnotes", ref _strNotes))
                 xmlMentor.TryGetMultiLineStringFieldQuickly("notes", ref _strNotes);
+
+            if (string.IsNullOrEmpty(_strNotes))
+            {
+                string strEnglishNameOnPage = Name;
+                string strNameOnPage = string.Empty;
+                // make sure we have something and not just an empty tag
+                if (xmlMentor.TryGetStringFieldQuickly("nameonpage", ref strNameOnPage) &&
+                    !string.IsNullOrEmpty(strNameOnPage))
+                    strEnglishNameOnPage = strNameOnPage;
+
+                string strGearNotes =
+                    CommonFunctions.GetTextFromPdf(Source + ' ' + Page, strEnglishNameOnPage, _objCharacter);
+
+                if (string.IsNullOrEmpty(strGearNotes) && !GlobalSettings.Language.Equals(GlobalSettings.DefaultLanguage,
+                    StringComparison.OrdinalIgnoreCase))
+                {
+                    string strTranslatedNameOnPage = DisplayNameShort(GlobalSettings.DefaultLanguage);
+
+                    // don't check again it is not translated
+                    if (strTranslatedNameOnPage != _strName)
+                    {
+                        // if we found <altnameonpage>, and is not empty and not the same as english we must use that instead
+                        if (xmlMentor.TryGetStringFieldQuickly("altnameonpage", ref strNameOnPage)
+                            && !string.IsNullOrEmpty(strNameOnPage) && strNameOnPage != strEnglishNameOnPage)
+                            strTranslatedNameOnPage = strNameOnPage;
+
+                        _strNotes = CommonFunctions.GetTextFromPdf(Source + ' ' + DisplayPage(GlobalSettings.Language),
+                            strTranslatedNameOnPage, _objCharacter);
+                    }
+                }
+                else
+                    _strNotes = strGearNotes;
+            }
+
             if (!xmlMentor.TryGetField("id", Guid.TryParse, out _guiSourceID))
             {
                 Log.Warn(new object[] { "Missing id field for xmlnode", xmlMentor });
