@@ -5,7 +5,8 @@ Application Changes:
 - Cyberware limited by the number of limbs is now not affected by detached modular limbs.
 - Tooltips breaking down a character's total armor now properly recognize when certain sources of armor have been made invalid.
 - Fixed Gear not using Restricted Gear correctly. Possibly needs more testing, but initial efforts seem correct. 
-- Some changes to logic on how usage of restricted gear is displayed
+- Some changes to logic on how usage of restricted gear is displayed.
+- Adept Powers, AI Programs, Metamagic Arts, Complex Forms, Critter Powers, Mentor Spirits, Metamagics, Spells, and Weapon Mounts should now automatically fetch notes from linked PDFs.
 
 New Strings:
 - String_GameplayOption
